--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 pillow==10.3.0
+psycopg2-binary==2.9.9
 python-telegram-bot==21.2
 requests==2.32.2
 sniffio==1.3.1
