--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ anyio==4.4.0
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
-Django==4.2.6
+Django==5.0.6
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -11,6 +11,7 @@ pillow==10.3.0
 psycopg2-binary==2.9.9
 python-telegram-bot==21.2
 requests==2.32.2
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.0
 tzdata==2024.1
