--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==4.2.6
+gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
